# hkstairs

./: .gitignore  .gitmodules  README.md  manage.py  pyproject.toml  requirements.txt  stairquest-updates-info.txt
hkstairs/: settings.py  urls.py  wsgi.py
scripts/: create_db.sh  deploy.sh  refresh-gunicorn.sh  setup_db.sh  update_from_sq.sh
stairdb/: admin.py  apps.py  context_processors.py  models copy.py  models.py  serializers.py  urls.py  views.py
stairdb/cache/: .gitignore
stairdb/fixtures/: Stairs_v5 points_new.dbf  Stairs_v5 points_new.prj  Stairs_v5 points_new.qpj  Stairs_v5 points_new.shp  Stairs_v5 points_new.shx  Stairs_v5 points_wgs84.dbf  Stairs_v5 points_wgs84.shp  Stairs_v5 points_wgs84.shx  Stairs_v5_polygons_wsg84.dbf  Stairs_v5_polygons_wsg84.shp  Stairs_v5_polygons_wsg84.shx  stairs_WGS84_v4_Point.dbf  stairs_WGS84_v4_Point.sbn  stairs_WGS84_v4_Point.sbx  stairs_WGS84_v4_Point.shp  stairs_WGS84_v4_Point.shp.xml  stairs_WGS84_v4_Point.shx  stairs_WGS84_v4_Polygon.dbf
stairdb/management/commands/: _utils.py  import_photos.py  setup_db.py  (+6 more)
stairdb/migrations/: 0001_initial.py  0002_auto_20170216_1203.py  0002_auto_20170307_0906.py  0002_auto_20170412_2153.py  0002_auto_20170512_0157.py  0003_auto_20170216_1306.py  0003_auto_20171109_0008.py  0004_auto_20170216_1421.py  0004_auto_20171109_0951.py  0005_auto_20170306_1606.py  0005_auto_20171213_1534.py  0006_auto_20190503_0213.py  0006_stair_centroid.py  0007_auto_20190507_0944.py  0007_remove_stair_centroid.py
stairdb/templates/: base.html  base.html.bak  base.html.new  index.html  stairs.html
(+15 files in other folders)
